Bug 189190 - REGRESSION(r235398) ASSERTION failure !m_client.didFinishDocumentLoadForFrame https://bugs.webkit.org/show_bug.cgi?id=189190

Patch by Frederic Wang <fwang@igalia.com> on 2018-09-04
Reviewed by Alex Christensen.

Assertions to prevent use of the deprecated WKPageSetPageLoaderClient class are hit when
running system Safari with the current macOS/iOS releases, making impossible to launch it.
This patch conditionally skips these assertions so that they are only verified for
macOS > 10.14 or other platforms.

* UIProcess/API/C/WKPage.cpp:
(WKPageSetPageLoaderClient): Only assert on future OS releases.

Canonical link: https://commits.webkit.org/204257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235618 268f45cc-cd09-0410-ab3c-d52691b4dbfc